# guardrail-benchmark

./: .env.example  .gitignore  README.md  main.py  mise.toml  pyproject.toml
core/: base_dataset.py  base_model.py  batch_evaluator.py  benchmark_executor.py  engine.py  evaluator.py  schema.py
datasets/: ptbr_academic_dataset.py  toxic_chat_dataset.py
experiments/: caramllo_academic_guardrail_benchmark.py  caramllo_lattes_real_benchmark.py  gemini_ptbr_benchmark.py  gpt_5_mini_academic_guardrail_benchmark.py  gpt_5_mini_lattes_real_benchmark.py  gpt_5_nano_academic_guardrail_benchmark.py  gpt_5_nano_lattes_real_benchmark.py  llama_guard_8b_academic_guardrail_benchmark.py  llama_guard_8b_lattes_real_benchmark.py  llama_guard_academic_guardrail_benchmark.py  llama_guard_lattes_real_benchmark.py  openai_ptbr_benchmark.py  simple_caramllo_benchmark.py  simple_llama_guard_benchmark.py  simple_openai_benchmark.py
models/: caramllo_model.py  gemini_general_model.py  gemini_model.py  gemini_moderation_model.py  llama_guard_local_model.py  llama_guard_model.py  openai_general_model.py  openai_model.py  openai_moderation_model.py
models/batch_evaluators/: llama_guard_batch_evaluator.py
results/caramllo_academic_guardrail/000/: 000_caramllo_academic_guardrail_benchmark_20260224_215014.json  000_caramllo_academic_guardrail_benchmark_predictions_metadata_20260224_215014.json
results/caramllo_lattes_generated/000/: 000_caramllo_lattes_generated_benchmark_20260224_212701.json  000_caramllo_lattes_generated_benchmark_predictions_metadata_20260224_212701.json
results/caramllo_lattes_real/000/: 000_caramllo_lattes_real_benchmark_20260224_212107.json  000_caramllo_lattes_real_benchmark_predictions_metadata_20260224_212107.json
results/caramllo_ptbr/000/: 000_caramllo_ptbr_benchmark_20260224_152828.json  000_caramllo_ptbr_benchmark_20260224_202102.json  000_caramllo_ptbr_benchmark_predictions_metadata_20260224_152828.json  (+1 more)
tests/: conftest.py
tests/funtional/: test_concurrency.py  test_functional_lg_batch_evaluator.py
tests/integration/: test_caramllo_mock.py  test_gemini_wrapper.py  test_openai_wrapper.py
tests/smoke/: test_live_caramllo.py  test_live_connect.py  test_live_gemini.py  test_live_model_consistency.py  test_live_openai.py
tests/unit/: test_metrics.py  test_mock_caramllo.py  test_preprocessing.py  test_ptbr_academic_dataset_preprocessing.py  test_schemas.py  test_unit_lg_batch_evaluator.py
utils/: logging_config.py  metrics.py  plotting.py  save_output.py
(+52 files in other folders)
