[project]
name = "guardrail-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "huggingface-hub>=1.4.1",
    "logging>=0.4.9.6",
    "matplotlib>=3.10.8",
    "openai>=2.21.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
# TODO: Add optional dependencies for the different LLMs and datasets
